--- a/code/ch4_app/ch4_starter_video_collector/templates/videos/category.html
+++ b/code/ch4_app/ch4_starter_video_collector/templates/videos/category.html
@@ -20,10 +20,8 @@
             <div>
                 <a href="/videos/play/{{ v.id }}">
 
-
                     <img src="https://img.youtube.com/vi/{{ v.id }}/maxresdefault.jpg"
                         class="img img-responsive {{ ' '.join(classes) }}" alt="{{ v.title }}" title="{{ v.title }}">
-
 
                 </a>
                 <a href="/videos/play/{{ v.id }}" class="author">{{ v.author }}</a>
@@ -42,8 +40,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
 
-            <a hx-get="/videos/add/{{ category.category }}" hx-swap="outerHTML swap:.25s" class="fade-me-out"><i
-                    class="fas fa-plus-circle">add a video</i></a>
+            {{ render_partial("/videos/partials/add_video_button.html", category=category)}}
 
         </div>
         <div class="col-md-4"></div>
